Fix install path permissions and runtime crash log placement

--- a/systemd/ogm_pi.service
+++ b/systemd/ogm_pi.service
@@ -24,6 +24,7 @@ ProtectControlGroups=yes
 ProtectKernelLogs=yes
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
+ReadWritePaths=/opt/OGM_slave_pi
 SupplementaryGroups=gpio dialout
 
 [Install]
