--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Runtime dependencies for OGM_slave_pi tools and daemon.
 PyYAML>=6.0
 pylibmodbus>=0.5.0  # Requires libmodbus installed on the host.
+pymodbus>=3.11.0
 gpiod>=1.5  # Prefer system package python3-libgpiod on Debian/RPi OS.
